crates/reinhardt-pages/tests/ui/style/fail/direct_calc.rs
use reinhardt_pages::{style_def};

#[style_def]
static STYLES: CardStyles = style! { .card { width: calc(100% - 1rem); } };
fn main() {}
